Modularize application